# aimarket-agent

./: CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
aimarket_agent/: __init__.py  agent.py  cli.py  receipts.py
docs/: en.md  es.md  ru.md
tests/: test_receipts.py
